# it_solutions_backend

./: .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml
nginx/: Dockerfile  nginx.conf
server/: Dockerfile  pyproject.toml
server/apps/farpost/: admin.py  apps.py  models.py  routers.py  serializers.py  viewsets.py
server/apps/farpost/management/commands/: load_adverts.py
server/apps/users/: admin.py  serializers.py  urls.py
server/apps/users/models/: user.py
server/apps/users/models/managers/: user.py
server/config/: api_urls.py  urls.py
server/config/migrations/farpost/: 0001_initial.py
server/config/migrations/users/: 0001_initial.py
server/config/settings/: __init__.py  installed_apps.py  settings.py
server/default_data/: farpost_advert.json
